// Vitest Snapshot v1

exports[`MermaidDiagramElement > Renders the diagram (and stops observing) whenever the mermaid block enters in the viewport 1`] = `
<tlp-mermaid-diagram>
  <div>
    <div
      class="diagram-mermaid"
    >
      <svg>
        
            classDiagram
                class Animal
                Vehicle &lt;|-- Car
        
      </svg>
    </div>
  </div>
</tlp-mermaid-diagram>
`;

exports[`MermaidDiagramElement > displays a spinner while observing if mermaid block is in the viewport 1`] = `
<tlp-mermaid-diagram>
  <div
    class="diagram-mermaid-source-computing"
  >
    <pre>
      <code
        class="language-mermaid"
      >
        
            classDiagram
                class Animal
                Vehicle &lt;|-- Car
        
      </code>
    </pre>
    <i
      aria-hidden="true"
      class="fas fa-circle-notch fa-spin"
    />
  </div>
  <div>
    <div
      class="diagram-mermaid diagram-mermaid-computing"
    />
  </div>
</tlp-mermaid-diagram>
`;
